fix sidebar too long issue

--- a/css/theme.css
+++ b/css/theme.css
@@ -17,6 +17,8 @@ body {
 
 .sidebar {
 	position: fixed;
+	height: 500px;
+	overflow-y: scroll;
 }
 
 .sidebar h1 {
@@ -29,7 +31,7 @@ body {
 }
 
 .sidebar li {
-	margin-top: .7em;
+	margin-top: 5px;
 	line-height: 1em;
 	list-style-type:lower-roman;
 }
@@ -113,7 +115,7 @@ body {
 
 /*归档和分类页面*/
 .well_list {
-	margin-left: 110px;
+	margin-left: 150px;
 	min-height: 0px;
 	padding: 0px;
 	margin-bottom: 0px;
@@ -192,7 +194,8 @@ body {
 }
 
 .index-content img {
-	max-width: 650px;
+	max-width: 100%;
+	/*max-width: 650px;*/
 	box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.1);
 }
 
